--- a/static/main.css
+++ b/static/main.css
@@ -36,7 +36,7 @@ html, body { background: var(--bg-color); }
 h1, h2, h3, h4, h5, h6, p, a, b, td, div, li, button, br, input, label { color: var(--text-color); }
 h1::selection, h2::selection, h3::selection, h4::selection, h5::selection, h6::selection, p::selection, a::selection, b::selection, td::selection, div::selection, svg::selection, li::selection, img::selection, button::selection, br::selection, input::selection, label::selection, span::selection, iframe::selection { background-color: var(--week-color); color: var(--text-color-active); }
 h1::-moz-selection, h2::-moz-selection, h3::-moz-selection, h4::-moz-selection, h5::-moz-selection, h6::-moz-selection, p::-moz-selection, a::-moz-selection, b::-moz-selection, td::-moz-selection, div::-moz-selection, svg::-moz-selection, li::-moz-selection, img::-moz-selection, button::-moz-selection, br::-moz-selection, input::-moz-selection, label::-moz-selection, span::-moz-selection, iframe::-moz-selection { background-color: var(--week-color); color: var(--text-color-active); }
-button { background-color: var(--button-color); }
+button { background-color: var(--button-color); border: 0; }
 button:hover { background-color: var(--button-color-hover); }
 button:active { background-color: var(--button-color-active); }
 button.header { background-color: var(--button-color-header); }
